<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <Button
        android:id="@+id/co_button"
        android:text="@string/co_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDetails"/>

    <Button
        android:id="@+id/o3_button"
        android:text="@string/o3_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDetails"/>

    <Button
        android:id="@+id/so2_button"
        android:text="@string/so2_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDetails"/>

    <Button
        android:id="@+id/no2_button"
        android:text="@string/no2_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openDetails"/>
</LinearLayout>