<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView android:text="@string/pressure_value"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>

    <TextView android:text="@string/pollution_value"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <TextView android:text="@string/precision_value"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="end"
        android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>